# pdf-ninja

./: README.md  package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/mobile/: index.html
src-tauri/src/: commands.rs  errors.rs  lib.rs  main.rs
src-tauri/src/commands/: mod.rs  server.rs
src-tauri/src/server/: mobile_page.rs  mod.rs  routes.rs  state.rs
src/components/: QRConnect.tsx
src/hooks/: useImageReceiver.ts
